--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   connectivity_plus: ^2.3.5
   dio: ^4.0.6
+  cached_network_image: ^3.2.1
+  url_launcher: ^6.1.5
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
