--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.3 <3.0.0"
+  sdk: ">=2.18.0 <3.0.0"
+  # sdk: ">=2.17.3 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -27,34 +28,37 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.1
+  connectivity_plus: ^2.3.5
+  country_picker: ^2.0.16
+  cupertino_icons: ^1.0.2
+  dio: ^4.0.6
+  dropdown_button2: ^1.8.2
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  flutter_dotenv: ^5.0.2
   flutter_rating_bar: ^4.0.1
-  connectivity_plus: ^2.3.5
-  dio: ^4.0.6
-  cached_network_image: ^3.2.1
-  url_launcher: ^6.1.5
+  flutter_riverpod: ^2.0.2
+  freezed_annotation: ^2.1.0
+  get_it: ^7.2.0
   image_picker: ^0.8.5+3
+  injectable: ^1.5.3
+  internet_connection_checker: ^1.0.0+1
+  json_annotation: ^4.7.0
+  logger: ^1.1.0
+  url_launcher: ^6.1.5
 
 dev_dependencies:
+  build_runner: ^2.2.1
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  freezed: ^2.1.0+1
+  injectable_generator: ^1.5.4
+  json_serializable: ^6.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -191,6 +195,7 @@ flutter:
     - assets/images/profile_page/3.png
     - assets/images/profile_page/4.png
     - assets/images/profile_page/5.png
+    - assets/images/profile_page/bkg.png
     # offer details page
     - assets/images/offer_details/offer_detail_image.png
     # latest reviews
@@ -200,13 +205,10 @@ flutter:
     - assets/images/latest_reviews/dp4.png
     - assets/images/latest_reviews/dp5.png
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
